--- a/wasix-htmx/Cargo.toml
+++ b/wasix-htmx/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1"
 askama = "0.12"
-axum = { version = "0.7.1", features = ["tokio", "json"] }
+axum = { version = "0.7", features = ["tokio", "json", "http1"] }
 tokio = { version = "1.39.3", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
@@ -20,6 +20,7 @@ serde_json = "1.0.105"
 reqwest = { git = "https://github.com/wasix-org/reqwest.git", default-features = false, features = [
     "json",
 ] }
+axum-server = "0.7.1"
 
 [patch.crates-io]
 tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "epoll" }
