--- a/new-web-scraper/Cargo.toml
+++ b/new-web-scraper/Cargo.toml
@@ -9,4 +9,4 @@ colored = "2.1.0"
 scraper = "0.20.0"
 tokio = { version = "1", features = ["full"] }
 
-hyper = { version = "0.14", features = ["client", "runtime", "server"] }
+hyper = { version = "0.14", features = ["client", "runtime", "server", "http1"] }
