--- a/001_hyper_tutorial/Cargo.toml
+++ b/001_hyper_tutorial/Cargo.toml
@@ -2,3 +2,20 @@
 members = ["crates/*"]
 
 resolver = "2"
+
+# [dependencies]
+# hyper = { version = "1", features = ["full"] }
+# tokio = { version = "1", features = ["full"] }
+# pretty_env_logger = "0.5"
+# http-body-util = "0.1"
+# bytes = "1"
+# serde = { version = "1.0", features = ["derive"] }
+# serde_json = "1.0"
+# form_urlencoded = "1"
+# http = "1"
+# futures-util = { version = "0.3", default-features = false }
+
+
+# [[bin]]
+# name = "a01_hyper_hello"
+# path = "src/main.rs"
