--- a/001_hyper_tutorial/crates/a01_hyper_hello/Cargo.toml
+++ b/001_hyper_tutorial/crates/a01_hyper_hello/Cargo.toml
@@ -14,4 +14,4 @@ serde_json = "1.0"
 form_urlencoded = "1"
 http = "1"
 futures-util = { version = "0.3", default-features = false }
-
+support_tokio_io_time = { path = "../support_tokio_io_time" }
