--- a/001_hyper_tutorial/crates/a01_hyper_hello/Cargo.toml
+++ b/001_hyper_tutorial/crates/a01_hyper_hello/Cargo.toml
@@ -4,14 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-hyper = { version = "1", features = ["full"] }
-tokio = { version = "1", features = ["full"] }
-pretty_env_logger = "0.5"
-http-body-util = "0.1"
-bytes = "1"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-form_urlencoded = "1"
-http = "1"
-futures-util = { version = "0.3", default-features = false }
+hyper = { workspace = true , features = ["full"] }
+tokio = {  workspace = true , features = ["full"] }
+pretty_env_logger = { workspace = true }
+http-body-util = { workspace = true }
+bytes = { workspace = true }
+serde = { workspace = true , features = ["derive"] }
+serde_json = { workspace = true }
+form_urlencoded = { workspace = true }
+http =  { workspace = true }
+futures-util = {  workspace = true , default-features = false }
 support_tokio_io_time = { path = "../support_tokio_io_time" }
