--- a/a01_hyper_tutorial/Cargo.toml
+++ b/a01_hyper_tutorial/Cargo.toml
@@ -1,16 +1,17 @@
-[package]
-name = "a01_hyper_tutorial"
-version = "0.1.0"
-edition = "2021"
-
 [workspace]
-members = [ "crates/*" ]
+members = ["crates/*"]
 resolver = "2"
 
-[dependencies]
+[workspace.package]
+# name = "a01_hyper_tutorial"
+# version = "0.1.0"
+# edition = "2021"
+
+[workspace.dependencies]
+# [dependencies]
 bytes = "1"
 form_urlencoded = "1"
-futures-util = { version = "0.3", default-features = false }
+futures-util = { version = "0.3.30", default-features = false }
 http = "1"
 http-body-util = "0.1"
 hyper = { version = "1", features = ["full"] }
@@ -20,3 +21,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 support_tokio_io_time = { path = "crates/support_tokio_io_time" }
 tokio = { version = "1", features = ["full"] }
+
+
+# [workspace.dependencies.support_tokio_io_time]
+# path = "crates/support_tokio_io_time"
